--- a/src/components/motorCycleComponent/index.scss
+++ b/src/components/motorCycleComponent/index.scss
@@ -19,7 +19,6 @@ body {
   }
   #road {
     width: 89vw;
-    height: 13px;
   }
   #motor {
     width: 43px;
